# OpenLedger

./: .gitignore  CMakeLists.txt  README.md  partitions_example.csv  sdkconfig  sdkconfig.old
components/mcufont/: CMakeLists.txt
components/mcufont/include/: RobotoRegular20.c  RobotoRegular32.c  fabrands26.c  fasolid26.c  mcu_fonts.h  mf_config.h
components/ol_ui/: CMakeLists.txt
components/ol_ui/include/: _ol_layout.h  ol_text.h  ol_ui.h
components/ol_ui/private_include/: _ol_layout.h
components/ol_ui/src/: _ol_layout.cpp  drawhi.cpp  ol_text.cpp  ol_ui.cpp  ol_ui_example.cpp
components/system_status/: CMakeLists.txt
components/system_status/include/: ol_system_status.h
components/system_status/src/: system_status.c
components/ttgo_display/: CMakeLists.txt
components/ttgo_display/include/: fontx.h  st7789.h
components/ttgo_display/src/: fontx.c  st7789.c
main/: CMakeLists.txt  actions.h  app.c  app.cpp  app.h  main.c  some.cpp  some.h  ui.c  ui.h
